# mini-gl-ui

./: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
examples/: README.md  demo.rs  remote_demo.rs
src/: lib.rs
src/primitives/: buffer.rs  mod.rs  shader.rs  texture.rs
src/renderer/: mod.rs  quad.rs  text.rs
src/ui/: button.rs  checkbox.rs  dropdown.rs  label.rs  layout.rs  mod.rs  panel.rs  remote.rs  textbox.rs
tests/: ui_components.rs
ts/: index.ts  remote-ui.ts
